update: basic working of app established now you can create and read already present blogs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,14 @@
 <%- include("partials/header.ejs") %>
 
-<h1>Welcome to postBlog</h1>
+<div>
+  <div>
+    <div>Welcome!</div>
+    <div>Create your first blog</div>
+    <div>
+      <a href="/createBlog">CREATE</a>
+      <a href="/readBlog">READ</a>
+    </div>
+  </div>
+</div>
 
 <%- include("partials/footer.ejs") %>
