--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,12 @@
 <%- include("partials/header.ejs") %>
 
-<div>
+<div class="welcome-container">
   <div>
-    <div>Welcome!</div>
-    <div>Create your first blog</div>
-    <div>
-      <a href="/createBlog">CREATE</a>
-      <a href="/readBlog">READ</a>
+    <div class="welcome-title">Welcome!</div>
+    <div class="welcome-subtitle">Create your first blog</div>
+    <div class="button-container">
+      <a href="/createBlog" class="create-btn">CREATE</a>
+      <a href="/readBlog" class="read-btn">READ</a>
     </div>
   </div>
 </div>
