--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,9 @@
-<h3>Here Goes the footer</h3>
+</main>
+
+<footer>
+  <!-- Step 4 - Add a dynamic year to the footer using JS. -->
+  <p>Copyright © <%= new Date().getFullYear() %></p>
+</footer>
+</body>
+
+</html>
