--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,1 +1,26 @@
-<h3>Here Goes the header</h3>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles/styles.css">
+  <title>PostBlog</title>
+</head>
+
+<body>
+  <div id="nav-container">
+    <nav>
+    <div>
+      <a href="/">
+        Home
+      </a>
+    </div>
+    <div>
+      <a href="/readBlog">
+        Blogs
+      </a>
+    </div>
+  </nav>
+  </div>
+  <main>
