--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,11 @@
       </a>
     </div>
     <div>
+      <a href="/createBlog">
+        Create
+      </a>
+    </div>
+    <div>
       <a href="/readBlog">
         Blogs
       </a>
